PROJECT(BMPANEL C)
SET(BMPANEL_VERSION_MAJOR "2")
SET(BMPANEL_VERSION_MINOR "0")
SET(BMPANEL_VERSION_MICRO "0")
SET(BMPANEL_VERSION_EXTRA "b")
SET(BMPANEL_VERSION "${BMPANEL_VERSION_MAJOR}.${BMPANEL_VERSION_MINOR}")
SET(BMPANEL_VERSION_FULL
	"${BMPANEL_VERSION}.${BMPANEL_VERSION_MICRO}.${BMPANEL_VERSION_EXTRA}")

SET(BMPANEL_EXECUTABLE_NAME "bmpanel${BMPANEL_VERSION_MAJOR}")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/memory.c
	${CMAKE_CURRENT_SOURCE_DIR}/message.c 
	${CMAKE_CURRENT_SOURCE_DIR}/theme-parser.c 
	${CMAKE_CURRENT_SOURCE_DIR}/bmpanel.c
	${CMAKE_CURRENT_SOURCE_DIR}/xutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/panel.c
	${CMAKE_CURRENT_SOURCE_DIR}/taskbar.c
	${CMAKE_CURRENT_SOURCE_DIR}/clock.c
	${CMAKE_CURRENT_SOURCE_DIR}/widget-interface.c
	${CMAKE_CURRENT_SOURCE_DIR}/image-cache.c
	${CMAKE_CURRENT_SOURCE_DIR}/widget-utils.c
	${CMAKE_CURRENT_SOURCE_DIR}/event-dispatchers.c
	${CMAKE_CURRENT_SOURCE_DIR}/xdg.c
)

FIND_PACKAGE(X11 REQUIRED)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(CAIRO REQUIRED cairo)
PKG_CHECK_MODULES(PANGO REQUIRED pangocairo)
PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(${X11_INCLUDE_DIRS} ${X11_Xcursor_INCLUDE_PATH} ${CAIRO_INCLUDE_DIRS}
	${GLIB_INCLUDE_DIRS} ${PANGO_INCLUDE_DIRS})
ADD_EXECUTABLE(${BMPANEL_EXECUTABLE_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${BMPANEL_EXECUTABLE_NAME} ${X11_LIBRARIES}
	${X11_Xcursor_LIB} ${CAIRO_LIBRARIES} ${GLIB_LIBRARIES} ${PANGO_LIBRARIES})
