FIND_PACKAGE(PkgConfig)
IF (PKG_CONFIG_FOUND)
	PKG_CHECK_MODULES(CHECK check)
	IF (CHECK_FOUND)
		MESSAGE(STATUS "Library 'check' was found, building tests...")
		SET(TEST_SRC
			${CMAKE_CURRENT_SOURCE_DIR}/main.c
			${CMAKE_CURRENT_SOURCE_DIR}/array.c
		)

		INCLUDE_DIRECTORIES(${CHECK_INCLUDE_DIR})
		ADD_EXECUTABLE(tests ${TEST_SRC})
		TARGET_LINK_LIBRARIES(tests ${CHECK_LIBRARIES} core)
	ENDIF (CHECK_FOUND)
ENDIF (PKG_CONFIG_FOUND)


